--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 tokio = {version = "1.40.0", features = ["rt-multi-thread"]}
 tonic = "0.12.2"
 prost = "0.13.3"
+clap = "4.5.18"
+protoc-rust = "3.0.0-alpha.2"
 
 [[bin]] # Bin to run the HelloWorld gRPC server
 name = "helloworld-server"
